test: 테스트에서 변경 가능한 리스트를 반환하도록 수정